--- a/management/univention-portal/debian/control
+++ b/management/univention-portal/debian/control
@@ -3,7 +3,7 @@ Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 9),
- univention-join,
+ univention-debhelper,
  univention-config-dev,
  univention-ucs-translation-template,
  ucslint,
