--- a/base/univention-config-registry/debian/control
+++ b/base/univention-config-registry/debian/control
@@ -12,15 +12,19 @@ Build-Depends:
  python-all,
  python-ipaddr,
  python-ipaddress,
+ python-mock,
  python-pytest,
  python-pytest-cov,
- python-univention-debhelper,
+ python-pytest-mock,
  python-six,
+ python-univention-debhelper,
+ python3 (>= 3.6) | python3-mock,
  python3-all,
  python3-pytest,
  python3-pytest-cov,
- python3-univention-debhelper,
+ python3-pytest-mock,
  python3-six,
+ python3-univention-debhelper,
 Standards-Version: 3.5.2
 
 Package: univention-config-registry
